Make something happen

--- a/myapp/rebar.config
+++ b/myapp/rebar.config
@@ -1,7 +1,10 @@
 {erl_opts, [debug_info]}.
 {deps, [ jsone ]}.
 
+
 {shell, [
   % {config, "config/sys.config"},
     {apps, [myapp]}
 ]}.
+
+{escript_incl_apps, [jsone]}.
