Some WIP things

--- a/myapp/rebar.config
+++ b/myapp/rebar.config
@@ -1,5 +1,6 @@
 {erl_opts, [debug_info]}.
-{deps, [ jsone ]}.
+{deps, [ jsone, cowboy, {erllambda, "2.2.3"},
+{backoff, {git, "https://github.com/ferd/backoff.git", {tag, "1.1.6"}}}]}.
 
 
 {shell, [
