Use _checkouts instead of building deps manually

--- a/myapp/rebar.config
+++ b/myapp/rebar.config
@@ -1,6 +1,5 @@
 {erl_opts, [debug_info]}.
-{deps, [ jsone, cowboy, {erllambda, "2.2.3"},
-{backoff, {git, "https://github.com/ferd/backoff.git", {tag, "1.1.6"}}}]}.
+{deps, [ jsone, {erllambda, "2.2.3"}, {backoff, {git, "https://github.com/ferd/backoff.git", {tag, "1.1.6"}}}]}.
 
 
 {shell, [
